@@ -29,6 +29,8 @@ import org.springframework.core.ResolvableType;
 import org.springframework.kafka.support.converter.AbstractJavaTypeMapper;
 import org.springframework.kafka.support.converter.DefaultJackson2JavaTypeMapper;
 import org.springframework.kafka.support.converter.Jackson2JavaTypeMapper;
+import org.springframework.kafka.support.converter.Jackson2JavaTypeMapper.TypePrecedence;
+import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
 import org.springframework.util.ClassUtils;
 import org.springframework.util.StringUtils;
@@ -81,6 +83,12 @@ public class JsonDeserializer<T> implements ExtendedDeserializer<T> {
 	 */
 	public static final String TRUSTED_PACKAGES = "spring.json.trusted.packages";
 
+	/**
+	 * Kafka config property to add type mappings to the type mapper:
+	 * 'foo=com.Foo,bar=com.Bar'.
+	 */
+	public static final String TYPE_MAPPINGS = JsonSerializer.TYPE_MAPPINGS;
+
 	protected final ObjectMapper objectMapper;
 
 	protected Class<T> targetType;
@@ -91,29 +99,79 @@ public class JsonDeserializer<T> implements ExtendedDeserializer<T> {
 
 	private boolean typeMapperExplicitlySet = false;
 
+	/**
+	 * Construct an instance with a default {@link ObjectMapper}.
+	 */
 	public JsonDeserializer() {
-		this((Class<T>) null);
+		this(null, true);
 	}
 
-	protected JsonDeserializer(ObjectMapper objectMapper) {
-		this(null, objectMapper);
+	/**
+	 * Construct an instance with the provided {@link ObjectMapper}.
+	 * @param objectMapper a custom object mapper.
+	 */
+	public JsonDeserializer(ObjectMapper objectMapper) {
+		this(null, objectMapper, true);
 	}
 
+	/**
+	 * Construct an instance with the provided target type, and a default
+	 * {@link ObjectMapper}.
+	 * @param targetType the target type to use if no type info headers are present.
+	 */
 	public JsonDeserializer(Class<T> targetType) {
-		this(targetType, new ObjectMapper());
+		this(targetType, true);
+	}
+
+	/**
+	 * Construct an instance with the provided target type, and
+	 * useHeadersIfPresent with a default {@link ObjectMapper}.
+	 * @param targetType the target type.
+	 * @param useHeadersIfPresent true to use headers if present and fall back to target
+	 * type if not.
+	 * @since 2.2
+	 */
+	public JsonDeserializer(Class<T> targetType, boolean useHeadersIfPresent) {
+		this(targetType, new ObjectMapper(), useHeadersIfPresent);
 		this.objectMapper.configure(MapperFeature.DEFAULT_VIEW_INCLUSION, false);
 		this.objectMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
 	}
 
-	@SuppressWarnings("unchecked")
+	/**
+	 * Construct an instance with the provided target type, and {@link ObjectMapper}.
+	 * @param targetType the target type to use if no type info headers are present.
+	 * @param objectMapper the mapper. type if not.
+	 */
 	public JsonDeserializer(Class<T> targetType, ObjectMapper objectMapper) {
+		this(targetType, objectMapper, true);
+	}
+
+	/**
+	 * Construct an instance with the provided target type, {@link ObjectMapper} and
+	 * useHeadersIfPresent.
+	 * @param targetType the target type.
+	 * @param objectMapper the mapper.
+	 * @param useHeadersIfPresent true to use headers if present and fall back to target
+	 * type if not.
+	 * @since 2.2
+	 */
+	@SuppressWarnings("unchecked")
+	public JsonDeserializer(@Nullable Class<T> targetType, ObjectMapper objectMapper, boolean useHeadersIfPresent) {
 		Assert.notNull(objectMapper, "'objectMapper' must not be null.");
 		this.objectMapper = objectMapper;
-		if (targetType == null) {
-			targetType = (Class<T>) ResolvableType.forClass(getClass()).getSuperType().resolveGeneric(0);
-		}
 		this.targetType = targetType;
+		if (this.targetType == null) {
+			this.targetType = (Class<T>) ResolvableType.forClass(getClass()).getSuperType().resolveGeneric(0);
+		}
+		Assert.isTrue(this.targetType != null || useHeadersIfPresent,
+				"'targetType' cannot be null if 'useHeadersIfPresent' is false");
+
+		if (this.targetType != null) {
+			this.reader = this.objectMapper.readerFor(this.targetType);
+		}
+
 		addTargetPackageToTrusted();
+		this.typeMapper.setTypePrecedence(useHeadersIfPresent ? TypePrecedence.TYPE_ID : TypePrecedence.INFERRED);
 	}
 
 	public Jackson2JavaTypeMapper getTypeMapper() {
@@ -185,6 +243,10 @@ public class JsonDeserializer<T> implements ExtendedDeserializer<T> {
 					throw new IllegalStateException(VALUE_DEFAULT_TYPE + " must be Class or String");
 				}
 			}
+
+			if (this.targetType != null) {
+				this.reader = this.objectMapper.readerFor(this.targetType);
+			}
 			addTargetPackageToTrusted();
 		}
 		catch (ClassNotFoundException | LinkageError e) {
@@ -195,6 +257,11 @@ public class JsonDeserializer<T> implements ExtendedDeserializer<T> {
 				this.typeMapper.addTrustedPackages(
 						StringUtils.commaDelimitedListToStringArray((String) configs.get(TRUSTED_PACKAGES)));
 			}
+		}
+		if (configs.containsKey(TYPE_MAPPINGS) && !this.typeMapperExplicitlySet
+				&& this.typeMapper instanceof AbstractJavaTypeMapper) {
+			((AbstractJavaTypeMapper) this.typeMapper).setIdClassMapping(
+					JsonSerializer.createMappings((String) configs.get(JsonSerializer.TYPE_MAPPINGS)));
 		}
 	}
 
@@ -218,19 +285,23 @@ public class JsonDeserializer<T> implements ExtendedDeserializer<T> {
 		if (data == null) {
 			return null;
 		}
-		JavaType javaType = this.typeMapper.toJavaType(headers);
-		if (javaType == null) {
-			Assert.state(this.targetType != null, "No type information in headers and no default type provided");
-			return deserialize(topic, data);
+		ObjectReader reader = null;
+		if (this.typeMapper.getTypePrecedence().equals(TypePrecedence.TYPE_ID)) {
+			JavaType javaType = this.typeMapper.toJavaType(headers);
+			if (javaType != null) {
+				reader = this.objectMapper.readerFor(javaType);
+			}
 		}
-		else {
-			try {
-				return this.objectMapper.readerFor(javaType).readValue(data);
-			}
-			catch (IOException e) {
-				throw new SerializationException("Can't deserialize data [" + Arrays.toString(data) +
-						"] from topic [" + topic + "]", e);
-			}
+		if (reader == null) {
+			reader = this.reader;
+		}
+		Assert.state(reader != null, "No type information in headers and no default type provided");
+		try {
+			return reader.readValue(data);
+		}
+		catch (IOException e) {
+			throw new SerializationException("Can't deserialize data [" + Arrays.toString(data) +
+					"] from topic [" + topic + "]", e);
 		}
 	}
 
@@ -239,9 +310,7 @@ public class JsonDeserializer<T> implements ExtendedDeserializer<T> {
 		if (data == null) {
 			return null;
 		}
-		if (this.reader == null) {
-			this.reader = this.objectMapper.readerFor(this.targetType);
-		}
+		Assert.state(this.reader != null, "No headers available and no default type provided");
 		try {
 			T result = null;
 			if (data != null) {
@@ -259,4 +328,5 @@ public class JsonDeserializer<T> implements ExtendedDeserializer<T> {
 	public void close() {
 		// No-op
 	}
+
 }
