@@ -62,3 +62,11 @@ The `@EmbeddedKafka` annotation now populates an `EmbeddedKafkaBroker` bean inst
 This allows the use of `@EmbeddedKafka` in JUnit 5 tests.
 
 See <<testing>> for more information.
+
+==== JsonSerializer/Deserializer Enhancements
+
+You can now provide type mapping information using producer/consumer properties.
+
+New constructors are available on the deserializer to allow overriding the type header information with the supplied target type.
+
+See <<serdes>> for more information.
